--- a/templates/template-card.html
+++ b/templates/template-card.html
@@ -5,7 +5,11 @@
     </div>
 
     <div class="card__details">
-        <div class="card__detail-box {%CITY_OVERPOPULATED%}">
+        <div class="card__detail-box {%NOT_OVERPOPULATED%}">
+            <h6 class="card__detail card__detail--live">Overpopulated</h6>
+        </div>
+
+        <div class="card__detail-box">
             <h6 class="card__detail">{%CITYPOPULATION%}</h6>
         </div>
 
