--- a/templates/template-city.html
+++ b/templates/template-city.html
@@ -147,7 +147,7 @@
         left: 19rem;
       }
 
-      .city__overpopulated {
+      .city__live {
         position: absolute;
         top: -4rem;
         right: -4rem;
@@ -163,7 +163,7 @@
         justify-content: center;
       }
 
-      .city__organic h5 {
+      .city__live h5 {
         font-weight: 900;
         text-transform: uppercase;
         font-size: 1.8rem;
@@ -259,7 +259,7 @@
         margin-left: 1rem;
       }
 
-      .not-organic {
+      .not-live {
         display: none;
       }
     </style>
@@ -270,11 +270,11 @@
       <h1>German Cities</h1>
 
       <figure class="city">
-        <div class="city__overpopulated {%NOT_OVERPOPULATED%}"><h5>Overpopulated</h5></div>
+        <div class="city__live {%NOT_OVERPOPULATED%}"><h5>Overpopulated</h5></div>
         <a href="#" class="city__back">
           <span class="emoji-left">👈</span>Back
         </a>
-        <div class="product__hero">
+        <div class="city__hero">
           <span class="city__emoji city__emoji--1">{%IMAGE%}</span>
           <span class="city__emoji city__emoji--2">{%IMAGE%}</span>
           <span class="city__emoji city__emoji--3">{%IMAGE%}</span>
