--- a/templates/template-overview.html
+++ b/templates/template-overview.html
@@ -125,7 +125,7 @@
         padding: 1.75rem;
       }
 
-      .card__detail--organic {
+      .card__detail--live {
         font-weight: 900;
         text-transform: uppercase;
         font-size: 1.9rem;
@@ -181,7 +181,7 @@
         margin-left: 1rem;
       }
 
-      .not-organic {
+      .not-live {
         display: none;
       }
     </style>
@@ -193,7 +193,7 @@
 
       <div class="cards-container">
 
-        {%CITY_CARD%}
+        {%CITY_CARDS%}
 
       </div>
     </div>
