City page rendered

--- a/templates/template-city.html
+++ b/templates/template-city.html
@@ -13,7 +13,7 @@
       href="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/240/apple/155/ear-of-maize_1f33d.png"
     />
 
-    <title>{%CITYNAME%} {%IMAGE%}</title>
+    <title>{%CITYNAME%}</title>
 
     <style>
       *,
@@ -270,8 +270,8 @@
       <h1>German Cities</h1>
 
       <figure class="city">
-        <div class="city__live {%NOT_OVERPOPULATED%}"><h5>Overpopulated</h5></div>
-        <a href="#" class="city__back">
+        <div class="city__live {%NOT_OVERPOPULATED%}"><h5>Overpopulated!</h5></div>
+        <a href="/overview" class="city__back">
           <span class="emoji-left">👈</span>Back
         </a>
         <div class="city__hero">
@@ -285,17 +285,17 @@
           <span class="city__emoji city__emoji--8">{%IMAGE%}</span>
           <span class="city__emoji city__emoji--9">{%IMAGE%}</span>
         </div>
-        <h2 class="city__name">{%CITYNAME}</h2>
+        <h2 class="city__name">{%CITYNAME%}</h2>
         <div class="city__details">
-          <p><span class="emoji-left">🌍</span>{%CITYNAME%}</p>
-          <p><span class="emoji-left">❤️</span>{%CITYCODES%}</p>
-          <p><span class="emoji-left">📦</span>{%CITYPOPULATION%}</p>
-          <p><span class="emoji-left">🏷</span>{%CITYAREA%}</p>
+          <p>{%CITYNAME%}</p>
+          <p>{%CITYCODES%}</p>
+          <p>{%CITYPOPULATION%}</p>
+          <p>{%CITYAREA%}</p>
         </div>
   
         <a href="#" class="city__link">
           <span class="emoji-left">🛒</span>
-          <span>{%CITYAREA%}</span>
+          <span>City area: {%CITYAREA%}</span>
         </a>
   
         <p class="city__description">
