--- a/templates/template-card.html
+++ b/templates/template-card.html
@@ -1,12 +1,12 @@
 <figure class="card">
-    <div class="card__emoji">{%IMAGE%}</div>
+    <div class="card__emoji">{%IMAGE%}{%IMAGE%}</div>
     <div class="card__title-box">
         <h2 class="card__title">{%CITYNAME%}</h2>
     </div>
 
     <div class="card__details">
         <div class="card__detail-box {%NOT_OVERPOPULATED%}">
-            <h6 class="card__detail card__detail--live">Overpopulated</h6>
+            <h6 class="card__detail card__detail--live">Overpopulated!</h6>
         </div>
 
         <div class="card__detail-box">
@@ -14,7 +14,7 @@
         </div>
 
         <div class="card__detail-box">
-            <h6 class="card__detail card__detail--area">{%CITYAREA%}</h6>
+            <h6 class="card__detail card__detail--area">City area: {%CITYAREA%}</h6>
         </div>
     </div>
 
